--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ position: relative
 .main-slider div{
   width: 100%;
   height: 100vh;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -292,7 +292,7 @@ footer{
   background-position: center;
   background-size: cover;
 }
-#pop-up__close{
+#pop-up__close,.pop-up__close{
   position: absolute;
   display: block;
   width: 35px;
@@ -302,7 +302,7 @@ footer{
   right: 20px;
   cursor: pointer;
 }
-#pop-up__close:after{
+#pop-up__close:after,.pop-up__close:after{
   content: '';
   position: absolute;
   background-repeat: no-repeat;
@@ -319,7 +319,7 @@ footer{
 .gallery_pagination{
   padding: 25px 0;
   text-align: center;
-  
+
 }
 .gallery_pagination a{
   color: #000;
@@ -417,6 +417,13 @@ footer{
     width: 100%;
     height: 350px;
 }
+.show_room .room_name,.show_room .room_price{
+  padding-left: 50px;
+  font-size: 30px;
+}
+.show_room .room_price span{
+  font-size: 50px;
+}
 @media screen and (max-width: 900px) {
   .history__elements{
     width: 90%;
@@ -459,5 +466,15 @@ footer{
   }
   .gallery__item{
     width: 100%;
+  }
+  .show_room .room_name,.show_room .room_price{
+    padding-left: 10px;
+    font-size: 20px;
+  }
+  .show_room .room_price span{
+    font-size: 30px;
+  }
+  .show_room-main_img{
+    height: 70vh;
   }
 }
