--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,7 @@ footer{
 #map{
     width: 100%;
     height: 350px;
+    background-color: grey;
 }
 .show_room .room_name,.show_room .room_price{
   padding-left: 50px;
